changed index location

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <script defer type="module" src="../script.js"></script> 
+    <link rel="stylesheet" href="./src/view/style.css">
+    <script defer type="module" src="./src/script.js"></script> 
     <link rel="icon" href="./rice_codesLOGOS/RiceCodes.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/11bdd8b393.js" crossorigin="anonymous"></script>
     <title>Shortly by Rice</title>
